# GraduationProject

./: .gitignore  CMakeLists.txt  README.md  cloud_viewer.cpp
grabber/: openni_grabber.cpp
python/: .filter.py.swp  augmented_nn.py  filter.py  gethistories.sh  nn.py  notes  siamese example output  siamese.py
readpcd/: makePNG.h  readpcd.cpp
saved_data/: frame-20180117T073454.021724.pcd  frame-20180117T073454.054867.pcd  frame-20180117T073454.082569.pcd  frame-20180117T073454.108396.pcd  frame-20180117T073454.136869.pcd  frame-20180117T073454.169026.pcd  frame-20180117T073454.197788.pcd  frame-20180117T073454.223560.pcd  frame-20180117T073454.250003.pcd  frame-20180117T073454.279241.pcd  frame-20180117T073454.308398.pcd  frame-20180117T073454.334287.pcd  frame-20180117T073454.360061.pcd  frame-20180117T073454.386762.pcd  frame-20180117T073454.415444.pcd  frame-20180117T073454.441180.pcd  frame-20180117T073454.466614.pcd  frame-20180117T073454.493518.pcd  frame-20180117T073454.523591.pcd  frame-20180117T073454.550277.pcd  frame-20180117T073454.578807.pcd  frame-20180117T073454.611620.pcd  frame-20180117T073454.643062.pcd  frame-20180117T073454.672246.pcd  frame-20180117T073454.698057.pcd  frame-20180117T073454.726022.pcd  frame-20180117T073454.755086.pcd  frame-20180117T073454.782785.pcd  frame-20180117T073454.807550.pcd  frame-20180117T073454.834123.pcd  frame-20180117T073454.867467.pcd  frame-20180117T073454.893561.pcd  frame-20180117T073454.921067.pcd  frame-20180117T073454.950338.pcd  (+188 more)
src/grabber/: CMakeLists.txt  openni_grabber.cpp
src/readpcd/: CMakeLists.txt
(+122 files in other folders)
